# learning-crewai

./: README.md
simple_agent_tutorial/: README.md  pyproject.toml  report.md
simple_agent_tutorial/src/simple_agent_tutorial/: crew.py  main.py
