[project]
name = "simple_agent_tutorial"
version = "0.1.0"
description = "simple_agent_tutorial using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0"
]

[project.scripts]
simple_agent_tutorial = "simple_agent_tutorial.main:run"
run_crew = "simple_agent_tutorial.main:run"
train = "simple_agent_tutorial.main:train"
replay = "simple_agent_tutorial.main:replay"
test = "simple_agent_tutorial.main:test"
run_with_trigger = "simple_agent_tutorial.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
